styl/_digital.styl
.time__digital
  &__time
    font-size 7vmin
  &__date
    margin-top 2vmin
    font-size 3vmin

  &__centered
    position absolute

    top  50%
    width 100%
    left 0
    transform translateY(-50%)
    text-align center

    background-color transparent

  &__info
    display block
    position relative

    top 55%
    left 0

    width 100%

    text-align center

    font-size 2vmin

  &__indicator
    display block
    position relative

    top 20%
    left 0

    width 100%

    text-align center

    font-size 3vmin

    opacity 0.4

  &__current
    display block
    position relative

